Converted base state of project 4 to hooks

--- a/getting-started.html
+++ b/getting-started.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-  <div id="reactapp"></div>
-  <script src="compiled/gettingStarted.bundle.js"></script>
+  <body>
+    <div id="getting-started"></div>
+    <script type="module" src="/src/gettingStarted.jsx"></script>
+  </body>
 </body>
 
 </html>
