--- a/p2.html
+++ b/p2.html
@@ -1,16 +1,21 @@
 <!doctype html>
+<!-- React.js applications are written in JavaScript, but you need an HTML
+     document to load the JavaScript. This HTML loads the React.js component
+     Example -->
 <html>
 
 <head>
-  <title>Class Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Class Project</title>
+  <!-- Insert the model data for the Example component into the DOM -->
   <script src="modelData/states.js"></script>
 </head>
 
 <body>
-  <div id="reactapp">
-    <script src="compiled/p2.bundle.js"></script>
-  </div>
+  <body>
+    <div id="p2"></div>
+    <script type="module" src="/src/p2.jsx"></script>
+  </body>
 </body>
 
 </html>
